--- a/frontend/src/static/stylesheets/registration.css
+++ b/frontend/src/static/stylesheets/registration.css
@@ -14,7 +14,7 @@
     align-items: center;
     justify-content: center;
     background-image: url("../background.jpg");
-    background-position: 0 -20vh;
+    background-position: 0 100%;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -163,7 +163,6 @@ button:hover {
 
 @media only screen and (max-width: 1368px) {
     .register-container {
-        background-position: 0 45vh;
         background-size: contain;
     }
 }
@@ -171,16 +170,11 @@ button:hover {
 @media only screen and (max-width: 960px) {
     .register-container {
         overflow-y: hidden;
-        background-position: 0 50vh;
     }
 
 }
 
 @media only screen and (max-width: 1024px) {
-    .register-container {
-        background-position: 0 50vh;
-    }
-
     .form-box {
         top: -5vh;
     }
@@ -189,18 +183,13 @@ button:hover {
 
 @media only screen and (max-width: 560px) {
     .register-container {
-        width: 98vw;
-        height: 80vh;
+        width: 100%;
+        height: 75%;
     }
 
 }
 
 @media only screen and (max-width: 480px) {
-    .register-container {
-        width: 98vw;
-        height: 70vh;
-        background-position: 0 45vh;
-    }
 
     .password-check {
         font-size: 14px;
@@ -216,7 +205,6 @@ button:hover {
 
     .register-container {
         height: 80vh;
-        background-position: 0 45vh;
     }
 
     .btn-field button {
